--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact • BodaRankCTG</title>
+  <title>Contact • BoardRankCTG</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
 </head>
@@ -13,7 +13,7 @@
       <img src="home.png" alt="Home Icon" class="home-icon" />
     </a>
     <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
-    <h2>Designed by Hasnyne (CC'25)</h2>
+    <h2>Designed by Hasnyne (CC'25), Tasin (CC'25)</h2>
     <span class="menu-btn" id="menuButton">&#9776;</span>
   </header>
 
@@ -64,7 +64,7 @@
   </main>
 
   <footer>
-    &copy; 2025 BodaRankCTG — Made by Hasnyne
+    &copy; 2025 BordRankCTG — Made by Hasnyne
   </footer>
 
   <script>
