--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="home.png" alt="Home Icon" class="home-icon" />
         </a>
         <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
-        <h2>Designed by Hasnyne (CC'25), Tasin (CC'25)</h2>
+        <h2>Designed by Hasnyne & Tasin (Chittagong College'25)</h2>
         <span class="menu-btn" id="menuButton">&#9776;</span>
     </header>
 
@@ -218,7 +218,7 @@
     <script src="script.js"></script>
 
     <footer>
-      &copy; 2025 BoradRankCTG — Made by Hasnyne
+      &copy; 2025 BoardRankCTG — Made by Hasnyne
     </footer>
   
 </body>
