--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <meta property="og:title" content="Chittagong Board - SSC Result Ranking - 2025" />
-    <meta property="og:description" content="Chittagong Board - SSC Result Ranking - 2025, ssc result 2024 chittagong board, ssc result 2025 chittagong board, Discover the unofficial SSC Result Ranking 2025 
+    <meta property="og:description" content="-SSC Result Rank - BOARD RANK SSC 25 CHITTAGONG BOARD , ssc result 2024 chittagong board, ssc result 2025 chittagong board, Discover the unofficial SSC Result Ranking 2025 
     for the Chattogram Education Board. This website offers a complete and organized list of
      top-performing students across all schools in Chattogram, ranked by GPA, total marks,
       and subject-wise performance. Easily find your school or student using our smart search feature,
