--- a/index.html
+++ b/index.html
@@ -1,55 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="google-site-verification" content="siNtiPjvsyElA07czENYNNvVQicPoBsDL_dU5cwSVQ0" />
-
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- SEO Essentials -->
+    <title>SSC 2025 Board Rank | Chittagong Board & Bangladesh SSC Rankings</title>
+    <meta name="description" content="Check SSC 2025 board ranks for Chittagong Board and all Bangladesh boards. Fast, unofficial rankings, school comparisons, GPA analytics, and roll-wise search.">
+    <meta name="keywords" content="SSC 2025, SSC Result 2025, Board Rank, Chittagong Board Rank, Bangladesh SSC Rank, SSC 2025 Rank, HSC 2024 Result, SSC 2024 Result, Board-wise Rank, CTG Board Result, GPA Rank Bangladesh">
+    <meta name="author" content="Hasnyne & Tasin - Chittagong College 25" />
+    <meta name="robots" content="index, follow" />
 
-    <title>Chittagong Board - SSC Result Ranking - 2025</title>
-    <meta name="description" content="Board rank viewer for CTG board - search any roll and get results fast. Designed by Hasnyne (CC'25).">
-    <meta name="keywords" content="boardrank, ctg, rank, result, roll number, chittagong board, ssc result 2025, hsc result 2025, ssc result 2024, hsc result 2024, Chattogram Board, Hasnyne">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Hasnyne (CC'25)">
+    <!-- Google Verification -->
+    <meta name="google-site-verification" content="siNtiPjvsyElA07czENYNNvVQicPoBsDL_dU5cwSVQ0" />
 
-
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://boradrankctg.github.io/rank/" />
 
-
-    <meta property="og:title" content="Chittagong Board - SSC Result Ranking - 2025" />
-    <meta property="og:description" content="-SSC Result Rank - BOARD RANK SSC 25 CHITTAGONG BOARD , ssc result 2024 chittagong board, ssc result 2025 chittagong board, Discover the unofficial SSC Result Ranking 2025 
-    for the Chattogram Education Board. This website offers a complete and organized list of
-     top-performing students across all schools in Chattogram, ranked by GPA, total marks,
-      and subject-wise performance. Easily find your school or student using our smart search feature,
-       and compare two students side-by-side with visual progress bars showing marks in each subject. Whether you’re a student, 
-       guardian, or teacher, get instant access to accurate rankings, school-wise results, and individual performance analytics. 
-       Built for transparency, speed, and smart result tracking—this is your one-stop platform for SSC 2025 rankings under the Chattogram Board.bise ctg
-       boardrank, ctg, rank, result, roll number, chittagong board, ssc result 2025, hsc result 2025, ssc result 2024, hsc result 2024, Chattogram Board, Hasnyne
-       " />
-   
-
+    <!-- Open Graph for Social Sharing -->
+    <meta property="og:title" content="SSC 2025 Board Rank - Chittagong Board & Bangladesh Rankings" />
+    <meta property="og:description" content="Unofficial SSC 2025 rankings for Chittagong Board and Bangladesh. Search by roll number, compare schools, view GPA, marks, and ranks easily." />
     <meta property="og:url" content="https://boradrankctg.github.io/rank/" />
     <meta property="og:type" content="website" />
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
-    
-    <!-- Font Awesome CDN for icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      crossorigin="anonymous"
-    />
-    <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-  crossorigin="anonymous"
-/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
 
-    <style>
-
-    </style>
+    <!-- Optional Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
+
 
 <body>
     <header>
