--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="home.png" alt="Home Icon" class="home-icon" />
         </a>
         <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
-        <h2>Designed by Hasnyne & Tasin (Chittagong College'25)</h2>
+        <h2>   </h2>
         <span class="menu-btn" id="menuButton">&#9776;</span>
     </header>
 
@@ -97,11 +97,12 @@
           <div class="year-dropdown">
                           <select id="yearDropdown" onchange="loadYear(this.value)">
                     <option value="">Select Year and Exam</option>
+                    <option value="hsc_2025">HSC 2025</option>
                     <option value="2025">SSC 2025</option>
                     <option value="2024">SSC 2024</option>
                     <option value="2023">SSC 2023</option>
                     <option value="2022">SSC 2022</option>
-                    <option value="hsc_2024">HSC 2024</option>
+                    <option value="2025">SSC 2025</option>
                     <option value="hsc_2023">HSC 2023</option>
                 </select>
             </div>
