--- a/contactus.html
+++ b/contactus.html
@@ -9,23 +9,12 @@
 </head>
 <body>
   <header>
-    <a href="index.html">
-      <img src="home.png" alt="Home Icon" class="home-icon" />
-    </a>
     <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
-    <h2>Designed by Hasnyne & Tasin (Chittagong College'25)</h2>
-    <span class="menu-btn" id="menuButton">&#9776;</span>
+    <h2>Designed by Hasnyne (CC'25), Tasin (CC'25)</h2>
+
   </header>
 
-  <div class="sidebar" id="sidebar">
-    <button onclick="navigateTo('index.html')">Home</button>
-    <button onclick="navigateTo('about.html')">About</button>
-    <button onclick="navigateTo('contactus.html')">Contact Us</button>
-    <button onclick="navigateTo('review.html')">Reviews</button>
-    <div class="settings">
-      <label><input type="checkbox" id="themeToggle" onchange="toggleTheme()"> Dark Mode</label>
-    </div>
-  </div>
+ 
 
   <div class="icon-nav-wrapper" aria-label="Quick navigation">
     <nav class="icon-nav-container">
@@ -43,6 +32,9 @@
       </a>
       <button id="shareBtn" title="Share This Site" aria-label="Share This Site">
         <i class="fas fa-bullhorn"></i>
+      </button>
+      <button id="helpBtn" title="Help & Tips" aria-label="Help & Tips">
+        <i class="fas fa-question-circle"></i>
       </button>
     </nav>
   </div>
@@ -64,7 +56,7 @@
   </main>
 
   <footer>
-    &copy; 2025 BordRankCTG — Made by Hasnyne
+    &copy; 2025 BoardRankCTG — Made by Hasnyne
   </footer>
 
   <script>
@@ -84,9 +76,7 @@
     function navigateTo(page) {
       window.location.href = page;
     }
-    function toggleTheme() {
-      document.body.classList.toggle('dark-mode');
-    }
+  
   </script>
   <script src="script.js"></script>
 </body>
