--- a/about.html
+++ b/about.html
@@ -9,23 +9,10 @@
 </head>
 <body>
   <header>
-    <a href="index.html">
-      <img src="home.png" alt="Home Icon" class="home-icon" />
-    </a>
     <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
     <h2>Designed by Hasnyne & Tasin (Chittagong College'25)</h2>
-    <span class="menu-btn" id="menuButton">&#9776;</span>
   </header>
 
-  <div class="sidebar" id="sidebar">
-    <button onclick="navigateTo('index.html')">Home</button>
-    <button onclick="navigateTo('about.html')">About</button>
-    <button onclick="navigateTo('contactus.html')">Contact Us</button>
-    <button onclick="navigateTo('review.html')">Reviews</button>
-    <div class="settings">
-      <label><input type="checkbox" id="themeToggle" onchange="toggleTheme()"> Dark Mode</label>
-    </div>
-  </div>
 
   <div class="icon-nav-wrapper" aria-label="Quick navigation">
     <nav class="icon-nav-container">
@@ -43,6 +30,9 @@
       </a>
       <button id="shareBtn" title="Share This Site" aria-label="Share This Site">
         <i class="fas fa-bullhorn"></i>
+      </button>
+      <button id="helpBtn" title="Help & Tips" aria-label="Help & Tips">
+        <i class="fas fa-question-circle"></i>
       </button>
     </nav>
   </div>
@@ -283,3 +273,4 @@ body.dark-mode main .special-thanks {
 }
 
   </style>
+
