--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div class="new-box-wrapper" id="featuredBoxes">
   <!-- SSC years -->
   <div class="featured-box" data-value="2025" onclick="handleFeaturedClick('2025', this)">
-    <div class="new-ribbon">NEW</div> <!-- Only SSC-25 has this -->
+    <div class="new-ribbon"><span style="position: relative; left: -14px;">RECHECK</span></div>
     <div class="featured-text">
       <div class="ssc-line">SSC</div>
       <div class="year-line">25</div>
@@ -409,3 +409,4 @@ window.listenClickCount = function(roll, cb) {
   </script>
   
 </html>
+
