--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>SSC 2025 Board Rank | Chittagong Board & Bangladesh SSC Rankings</title>
     <meta name="description" content="Check SSC 2025 board ranks for Chittagong Board and all Bangladesh boards. Fast, unofficial rankings, school comparisons, GPA analytics, and roll-wise search.">
     <meta name="keywords" content="SSC 2025, SSC Result 2025, Board Rank, Chittagong Board Rank, Bangladesh SSC Rank, SSC 2025 Rank, HSC 2024 Result, SSC 2024 Result, Board-wise Rank, CTG Board Result, GPA Rank Bangladesh">
-    <meta name="author" content="Hasnyne & Tasin - Chittagong College 25" />
+    <meta name="author" content="Hasnyne" />
     <meta name="robots" content="index, follow" />
 
     <!-- Google Verification -->
@@ -24,6 +24,8 @@
     <meta property="og:type" content="website" />
 
     <!-- Stylesheets -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
 
@@ -36,7 +38,7 @@
     <header>
        
         <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
-        <h2>Designed by Hasnyne (CC'25), Tasin (CC'25)</h2>
+        <h2>Designed by Hasnyne & Tasin (Chittagong College'25)</h2>
         
     </header>
 
@@ -109,6 +111,7 @@
   <!-- SSC years -->
   <div class="featured-box" data-value="2025" onclick="handleFeaturedClick('2025', this)">
     <div class="new-ribbon"><span style="position: relative; left: -14px;">RECHECK</span></div>
+
     <div class="featured-text">
       <div class="ssc-line">SSC</div>
       <div class="year-line">25</div>
@@ -409,4 +412,3 @@ window.listenClickCount = function(roll, cb) {
   </script>
   
 </html>
-
