--- a/visitors.html
+++ b/visitors.html
@@ -17,18 +17,21 @@
   <main style="max-width: 900px; margin: auto;">
     <table border="1" style="width:100%; border-collapse: collapse;">
       
-<!-- in visitors.html: replace the <thead> block with -->
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Source</th>
-      <th>Institution</th>
-      <th>Experience</th>
-      <th>Device</th>
-      <th>Date</th>
-      <th>Action</th>
-    </tr>
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Source</th>
+          <th>Institution</th>
+          <th>Experience</th>
+          <th>Message</th>
+          <th>Device</th>
+          <th>Date</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      
   </thead>
   
       <tbody id="visitorsContainer"></tbody>
@@ -67,24 +70,34 @@
     onValue(visitorsRef, (snapshot) => {
       container.innerHTML = "";
       const visitors = snapshot.val() || {};
-      Object.entries(visitors).reverse().forEach(([id, visitor]) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-  <td>${visitor.name || ''}</td>
-  <td>${visitor.type || ''}</td>
-  <td>${visitor.source || ''}</td>
-  <td>${visitor.institution || ''}</td>
-  <td>${visitor.experience || ''}</td>
-  <td title="${visitor.deviceData ? JSON.stringify(visitor.deviceData).replace(/"/g, '&quot;') : ''}">
-    ${visitor.deviceData?.deviceModel || 'Unknown'}
-  </td>
-  <td>${visitor.timestamp ? new Date(visitor.timestamp).toLocaleString() : ''}</td>
-  <td><button onclick="deleteVisitor('${id}')">🗑️ Delete</button></td>
-`;
+      function escapeHtml(str) {
+  return String(str || '').replace(/[&<>"']/g, function(m) {
+    return ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]);
+  });
+}
 
+const totalVisitors = Object.entries(visitors).length;
+let count = totalVisitors;
 
-        container.appendChild(tr);
-      });
+Object.entries(visitors).reverse().forEach(([id, visitor]) => {
+  const tr = document.createElement("tr");
+  tr.innerHTML = `
+    <td>${count--}</td>
+    <td>${escapeHtml(visitor.name || '')}</td>
+    <td>${escapeHtml(visitor.type || '')}</td>
+    <td>${escapeHtml(visitor.source || '')}</td>
+    <td>${escapeHtml(visitor.institution || '')}</td>
+    <td>${escapeHtml(visitor.experience || '')}</td>
+    <td>${visitor.message ? '<div class="visitor-message">' + escapeHtml(visitor.message) + '</div>' : ''}</td>
+    <td title="${visitor.deviceData ? escapeHtml(JSON.stringify(visitor.deviceData)) : ''}">
+      ${escapeHtml(visitor.deviceData?.deviceModel || 'Unknown')}
+    </td>
+    <td>${visitor.timestamp ? new Date(visitor.timestamp).toLocaleString() : ''}</td>
+    <td><button onclick="deleteVisitor('${id}')">🗑️ Delete</button></td>
+  `;
+  container.appendChild(tr);
+});
+
     });
   
     // ✅ Delete function
