--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Essentials -->
-    <title>SSC 2025 Board Rank | Chittagong Board & Bangladesh SSC Rankings</title>
+    <title>SSC 2025 Board Rank | Chittagong Board BISE CTG Rankings | BOARD RANK CHITTAGING | HSC 25 | SSC 24 | HSC 24 |SSC 23 |</title>
     <meta name="description" content="Check SSC 2025 board ranks for Chittagong Board and all Bangladesh boards. Fast, unofficial rankings, school comparisons, GPA analytics, and roll-wise search.">
     <meta name="keywords" content="SSC 2025, SSC Result 2025, Board Rank, Chittagong Board Rank, Bangladesh SSC Rank, SSC 2025 Rank, HSC 2024 Result, SSC 2024 Result, Board-wise Rank, CTG Board Result, GPA Rank Bangladesh">
     <meta name="author" content="Hasnyne & Tasin - Chittagong College 25" />
@@ -400,3 +400,4 @@ window.listenClickCount = function(roll, cb) {
   </script>
   
 </html>
+
